codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_history_decision_aborted_multiline.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: lines_to_single_string(&aborted_multi)
---
✗ 你取消了 Codex 执行请求 echo line1 ...
