codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  实 验 功 能
  开 启 或 关 闭 实 验 功 能 ， 更 改 会 保 存 到  config.toml

› [ ] Ghost snapshots  Capture undo snapshots each turn.
  [x] Shell tool       Allow the model to run shell commands.

  Press space 选 择 或  enter 保 存 到 下 次 对 话
