codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  体 验 如 何 ？

› 1. bug           崩 溃 、 错 误 信 息 、 卡 顿 或 界 面 异 常 。
  2. bad result    输 出 偏 离 预 期 、 不 正 确 、 不 完 整 或 无 帮 助 。
  3. good result   有 帮 助 、 正 确 、 高 质 量 或 令 人 满 意 的 结 果 。
  4. safety check  正 常 使 用 因 安 全 检 查 或 拒 绝 而 被 阻 止 。
  5. other         缓 慢 、 功 能 建 议 、 用 户 体 验 反 馈 或 其 他 。
