codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__forked_thread_history_line.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• 线程分叉自 named-thread (e9f18a88-8081-4e51-9d4e-8af5cde2d8dd)
